package funcoes;

public interface ReprodutorMusical {
    public void tocar(String musica);
    public void pausar();
    public void selecionarMusica(String musica);
}
